--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,3 +1,10 @@
 set -g allow-passthrough on
 set -ga update-environment TERM
 set -ga update-environment TERM_PROGRAM
+set -g mouse on
+
+
+source-file ~/.config/tmux/keybinds.conf
+source-file ~/.config/tmux/theme.conf
+source-file ~/.config/tmux/statusbar.conf
+source-file ~/.config/tmux/plugins.conf
